--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .container{
     margin: min(50px,10%) ;
     display: grid;
-    grid-template-columns: max(60px,10%) max(50px,10%) max(50px,10%) max(50px,10%);
+    grid-template-columns: min(150px,15%) min(150px,15%) min(150px,15%) min(150px,15%);
     
 }
 #display{
